[project]
name = "pathfinder"
version = "0.1.0"
description = "AI Deep Research Multi-Agent System"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "tavily-python>=0.5",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "beautifulsoup4>=4.12",
    "firecrawl-py>=1.0",
    "psycopg[binary,pool]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
server = [
    "langgraph-cli>=0.2",
    "langgraph-sdk>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pathfinder"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
